@@ -1,0 +1,6 @@
+﻿namespace flash
+{
+	public class XML {
+
+	}
+}
