@@ -1,3 +1,8 @@
+2013-08-09  tasogare66 <tasogare66@gmail.com>
+
+	* red-rogue-cs:
+	Men関連をいくつか追加
+
 2013-08-04  tasogare66 <tasogare66@gmail.com>
 
 	* red-rogue-cs:
